<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math Champion</string>
    <string name="sua_palavra_passe">Your password</string>
    <string name="password">Password</string>
    <string name="logotipo_jogo">Game Logo</string>
    <string name="insira_o_seu_email">Insert your email</string>
    <string name="entrar_com_o_google">Login with Google</string>
    <string name="entrar">Login</string>
    <string name="email">Email</string>
    <string name="criar_conta">Create Account</string>
    <string name="confirmar_password">Confirm Password</string>
    <string name="take_photo">Change Photo</string>
    <string name="errorDiferentPasswords">Password dont match!</string>
    <string name="errorCreatingUser">Error creating user</string>
    <string name="userRegisteredSuccessfully">User registered successfully</string>
    <string name="passwordLength">Password length should be 6 or more</string>
    <string name="errorLogin">Email or password incorrect</string>
    <string name="edit_account">Edit Account</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">Goodbye</string>
    <string name="error_logging_out">Error logging out</string>
    <string name="edit_user_title">Edit User</string>
    <string name="error_edit_user">Error updating user</string>
    <string name="user_update_successful">User updated successfully</string>
    <string name="edit_user_profile">Edit profile</string>
    <string name="language">Language</string>
    <string name="welcome">Welcome</string>
    <string name="novo_jogo_singleplayer">New Game - Singleplayer</string>
    <string name="singleplayerTitle">Singleplayer</string>
    <string name="points">Points:</string>
    <string name="time_left">Time left:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="level">Level:</string>
    <string name="equation">Equation:</string>
    <string name="finishLevel">Finish Level</string>
    <string name="time_played">Time Played:</string>
    <string name="nextLevel">Next Level</string>
    <string name="paused">Paused</string>
    <string name="top_5_players">Top 5 players</string>
    <string name="top5_1_player">Top 5 - 1 Player</string>
    <string name="user">"User: "</string>
    <string name="authors">Marco Coelho - 2018012765\nPedro Morais - 2018020733</string>
    <string name="subject">Mobile Architectures\n2022/2023</string>
    <string name="logotipo_isec">Logotipo ISEC</string>
    <string name="credits">Credits</string>
    <string name="pressBackExit">Press back again to exit</string>
</resources>