<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="75dp"
    android:paddingBottom="250dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="48sp"
        android:gravity="center"
        android:text="@string/credits"
        />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/logotipo_isec"
        android:src="@drawable/logo_isec_transparente" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/subject"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/authors"
        />

</LinearLayout>